# Neural-Network-Approach-to-Implied-Volatility-Forecasting

./: .gitignore  Code.ipynb  Sentiment_Index.csv  pyproject.toml  shortened.ipynb
files/: data.csv
